@@ -1,3 +1,4 @@
+* Add a simple search box
 * New domain parser using shlex
 * Better translation dialog box
 * Add the richtext widget for WYSIWYG Editor on text fields
